test/bad/functions/call3.px

func f() def
    return

f(false)
